Fix issue with whitespace not rendering

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,10 @@ span.button-icon {
     background: #337ac6 !important;
 }
 
+.formatted {
+    white-space: pre-wrap;
+}
+
 body.waiting {
     cursor: wait !important;
 }
